@@ -10,25 +10,24 @@ import service.definition.FileOpsService;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+
+import static util.Constants.PATH_TO_TEST_CATALOG;
 
 @RunWith(JUnit4.class) public class FileOpsServiceImplTest {
-    private static final String MOBILITY_TXT_PATH = "/src/test/resources/mobility.txt";
-    private static final String EMPTY_STR = "";
-
     private FileOpsService fileOpsService;
     private Path pathToFile;
 
     @Before public void setUp() {
         fileOpsService = new FileOpsServiceImpl();
-        var absoluteStringToFile = Paths.get(EMPTY_STR).toAbsolutePath().toString() + MOBILITY_TXT_PATH;
-        pathToFile = Path.of(absoluteStringToFile);
+        pathToFile = Path.of(PATH_TO_TEST_CATALOG);
     }
 
     @Test public void testReadFile() throws IOException {
+        //arrange
         var lineCount = Files.readAllLines(pathToFile).stream().count();
+        //act
         var result = fileOpsService.readFile(pathToFile);
-
+        //assert
         Assert.assertNotNull(result);
         Assert.assertEquals(lineCount, result.size());
     }
